# eth-inscription-protocol

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  block.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
backend/: Dockerfile  Makefile  back.sql  docker-compose.yaml  go.mod  go.sum  openapi.yaml  to_test.sh
backend/configs/: config.yaml
backend/module/: table.go
firehose-starknet/: .gitignore  .goreleaser.yml  INTEGRATION.md  README.md  go.mod  go.sum
firehose-starknet/codec/: console_reader.go
firehose-starknet/nodemanager/: logging.go  superviser.go
firehose-starknet/substreams/: substreams.yaml
firehose-starknet/tools/: blocks.go  check.go  logging.go
firehose-starknet/types/: block.go  decoder.go
indexer/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  block.json  build.rs  docker-compose-postgres.yml  docker-compose.yml  log  output.sh  rust-toolchain.toml  substreams-starknet-v0.1.0.spkg  substreams-swift-v0.1.0.spkg
indexer/ethers-rs/ethers-core/src/types/transaction/: response.rs
indexer/migrations/2023-08-08-085109_create_swift/: down.sql  up.sql
indexer/migrations/2023-08-08-085109_create_transaction/: up.sql
indexer/proto/: protocol.proto  swift.proto
indexer/src/: cli.rs  database.rs  db.rs  handlers.rs  main.rs  mappings.rs  models.rs  program_handler.rs  routes.rs  schema.rs  substreams.rs
indexer/src/pb/: pb.rs  swift.r#type.v1.rs
indexer/src/proto/: codec.rs  starknet.protocol.v1.rs  swift.inscription.r#type.v1.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CustomConnectWallet.tsx  Notifications.tsx  SideBar.tsx  ThemeChanger.tsx  providers.tsx
src/constant/: Apits.ts  Global.ts
src/hooks/: useNotify.ts  useSendMessageToChain.ts
src/store/: useChatGroupMember.ts  useChatMessage.ts  useProfile.ts
src/style/: chat.css  moment.css
src/type/: Chat.ts  Moment.ts  SvgIcon.ts
src/utils/: AbbreviatedText.ts  AcronymWord.ts  InterfaceType.ts  api.ts  getEnv.ts  imageFormat.ts  ipfs.ts  request.ts  requestApi.ts  sendMessageOnChain.ts  timedifference.ts
substreams-ethereum/proto/: starknet.proto
substreams-starknet/: Cargo.toml  Makefile  README.md  substreams.yaml
substreams-swift/: Cargo.toml  README.md  log  substreams.yaml
(+205 files in other folders)
