[package]
name = "swift-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
diesel = { version = "2.1.0", features = ["postgres", "numeric", "r2d2", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
reqwest = "0.11"
http = "0.2.3"
tokio = { version = "1.27", features = ["time", "sync", "macros", "test-util", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.9", features = ["tls-roots"] }
prost = "0.11"
prost-types = "0.11"
thiserror = "1"
axum = "0.6.18"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.4", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
lazy_static = "1.4.0"
tower-http = { version = "0.3.5", features = ["cors"] }
regex = "1.8.4"
ureq = "2.7.1"

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["prost"] }
