[package]
name = "swift-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "numeric", "r2d2", "chrono"] }
http = "0.2.3"
tokio = { version = "1.16.1", features = ["time", "sync", "macros", "test-util", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-retry = "0.3.0"
prost = "0.10.4"
prost-types = "0.10.1"
thiserror = "1.0.25"
axum = "0.6.18"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.4", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
lazy_static = "1.4.0"
tower-http = { version = "0.3.5", features = ["cors"] }
regex = "1.8.4"
ethers = { version = "2.0", features = ["ws"] }
zksync-web3-rs = { git = "https://www.github.com/lambdaclass/zksync-web3-rs" }
hex = "0.4.3"

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["prost"] }
